Changes for getting tutorial to run with temp jar repo